# csadv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/csadv/: cli.py  config.py
src/csadv/boundary/: __init__.py  base.py  sat.py
src/csadv/experiments/: __init__.py  convergence.py
src/csadv/geometry/: __init__.py  cubed_sphere.py  transforms.py
src/csadv/initial_conditions/: __init__.py  base.py  gaussian.py
src/csadv/integrators/: __init__.py  lsrk.py
src/csadv/operators/: __init__.py  gll.py  sat_params.py
src/csadv/physics/: __init__.py  velocity_fields.py
src/csadv/rhs/: __init__.py  advection.py
tests/: test_boundary_sat.py  test_cli_smoke.py  test_convergence_smoke.py  test_geometry_smoke.py  test_gll.py  test_import.py  test_initial_conditions.py  test_lsrk.py  test_rhs_backend.py  test_velocity_fields.py
